Show party members in tool

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
   </head>
   <body>
     <script type="module" src="/src/main.ts"></script>
+    <h1 class="bb-title">Bunglebond's Buttons</h1>
+    <p class="bb-subtitle">Party Members</p>
   </body>
 </html>
